# kwin-zones

./: CMakeLists.txt  README.md  kwin-zones.kdev4
src/: CMakeLists.txt  ext-zones-v1.xml  main.cpp  zones.cpp  zones.h  zonessettings.kcfg  zonessettings.kcfgc
src/client/: CMakeLists.txt  zoneitemattached.cpp  zoneitemattached.h  zonemanager.cpp  zonemanager.h
test/: CMakeLists.txt  test.qml  twowindows.qml  zoneitemattached.h  zonemanager.cpp  zonemanager.h  zonewindow.cpp  zonewindow.h
